--- a/Evo/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/Evo/EvoHistGlue/EvoHistGlue.vcxproj
@@ -168,8 +168,8 @@
     <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
       <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\History\History.vcxproj">
-      <Project>{642c34fc-f20c-45a6-bab8-c75988c88f52}</Project>
+    <ProjectReference Include="..\Toolbox\History\History.vcxproj">
+      <Project>{0bfc7d59-a231-449a-90c2-eb64c59289ba}</Project>
     </ProjectReference>
     <ProjectReference Include="..\Win32_history\Win32_history.vcxproj">
       <Project>{1f07043f-bc80-42a8-ac9e-ff92cacda7e4}</Project>
