--- a/NNet/Signals/Signals.vcxproj
+++ b/NNet/Signals/Signals.vcxproj
@@ -22,20 +22,6 @@
     <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Toolbox\Direct2D\Direct2D.vcxproj">
-      <Project>{7a58b678-3520-4df0-b76b-cfcc20113ce9}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Toolbox\IoUtil\IoUtil.vcxproj">
-      <Project>{dd5676cc-9c49-4ac7-82ff-5ce0f2f7bfed}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Toolbox\runtimeCPP\runtimeCPP.vcxproj">
-      <Project>{dd49b1e3-6916-4230-b2a7-9e16e6ecdf95}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Toolbox\Utilities\Utilities.vcxproj">
-      <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="MonitorData.cpp" />
     <ClCompile Include="MonitorData.ixx" />
     <ClCompile Include="SigGenDynamicData.cpp" />
@@ -53,6 +39,20 @@
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="Track.ixx" />
     <ClCompile Include="TrackNr.ixx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Toolbox\Direct2D\Direct2D.vcxproj">
+      <Project>{7a58b678-3520-4df0-b76b-cfcc20113ce9}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Toolbox\IoUtil\IoUtil.vcxproj">
+      <Project>{dd5676cc-9c49-4ac7-82ff-5ce0f2f7bfed}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Toolbox\runtimeCPP\runtimeCPP.vcxproj">
+      <Project>{dd49b1e3-6916-4230-b2a7-9e16e6ecdf95}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Toolbox\Utilities\Utilities.vcxproj">
+      <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
